k8s/namespace.yml

kind: Namespace
apiVersion: v1
metadata:
  name: react-gke
  labels:
    name: react-gke
